--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <main>
       <h1>TIC TAC TOE</h1>
+      <div class="winning-container hide">
+        <p id="msg">Winner</p>
+        <button id="new-game-btn">New Game</button>
+      </div>
       <div class="container">
         <div class="game">
           <button class="box"></button>
