added match draw functionality

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       </div>
       <div class="container">
         <div class="game">
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
+          <button class="box" id="pbox"></button>
         </div>
       </div>
       <button id="reset-btn">Reset Game</button>
